--- a/Serious.html
+++ b/Serious.html
@@ -164,7 +164,7 @@ ul {
 		  <a class="nav-link active" href="Serious.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="Global.html">Global</a>
+		  <a class="nav-link" href="index.html">Global</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link" href="#">Agenda</a>
