--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ ul {
 <!-- Regeln in ID haben höhere Priorität-->
 	<!-- padding sagt rand zum Feld der Textes, Border ist einfach Rahmen, und Margin sagt Abstand zur Seite -->
 
-<h1 class='rotgruen' id="rahmen"><i class="fa fa-share-alt"></i> Willkommen</h1>
+<h1 class='rotgruen' id="rahmen"> Willkommen</h1>
 
 <h3> Sammlung von Allem</h3>
 
