--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ ul {
 
 	<h4> Warum mitmachen?</h4>
 <p id="rahmen">
-Alright!
+Sali Du! Gsesch das? Oder Lisisch, oder Körsch...
 </p> 
 
 <img id="rechts2" src="Bild.png" height="187" length="235.8">
