--- a/Serious.html
+++ b/Serious.html
@@ -198,18 +198,18 @@ ul {
 <!-- Regeln in ID haben höhere Priorität-->
 	<!-- padding sagt rand zum Feld der Textes, Border ist einfach Rahmen, und Margin sagt Abstand zur Seite -->
 
-<h1 class='rotgruen' id="rahmen"><i class="fa fa-share-alt"></i> Willkommen</h1>
+<h1 class='rotgruen' id="rahmen"> Willkommen</h1>
 
 <h3> Sammlung von Allem</h3>
 
 	<h4> Warum mitmachen?</h4>
 <p id="rahmen">
-Hier findest du die Möglichkeit, etwas 
-Ständige Weiterentwicklung und 
 Angestrebt werden soll eine grosse Vernetzung von unterschiedlichsten Wesen und deren Interessen
 Freiraum für alle Meinungen mit einem respektvollem Umgang
 Es sollen keine Hierarchien 'herrschen', dennoch wird Wert auf gewisse Grundregeln gelegt. 
 Wer Einwände hat, darf diese gerne äussern.
+
+Ok das wäre cool. Aber. Zuerst wird es wohl einfach ein Blog sein
 </p> 
 
 <img id="rechts2" src="Bild.png" height="187" length="235.8">
@@ -223,7 +223,7 @@ Trying to get this in as many languages as possible
 
 	<h4> text </h4>
 <p>
-Translators needed! 
+Solang das funktioniert isch doch guet
 </p>
 
 
@@ -234,7 +234,7 @@ Translators needed!
 
 <!-- Die Grössen ohne Angabe entsprechen Pixeln-->
 
-<a href= "https://de.wikipedia.org/wiki/Regenw%C3%BCrmer"><img src="RW.png" height="284"; width="710"/> </a>
+<a href= "https://de.wikipedia.org/wiki/Regenw%C3%BCrmer"><img src="RW.png" height="284"; width="284"/> </a>
 
 <a href= "http://www.rechnr.de/farbenrechner">Link zum farbenrechner</a>
 
