--- a/index.html
+++ b/index.html
@@ -176,18 +176,8 @@ ul {
 			<a class="nav-link" href="#">alle Foren</a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="#">alle Blogs</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="#">alle Chats</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="#">Negus/utilitar/Utativ/</a>
-		  </li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">persönliche Ecken</a>
-			  </li>
-		  </li>
+			<a class="nav-link" href="#">alle x</a>
+		  
 	  </ul>
 	  
 
