--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ ul {
 		  <a class="nav-link" href="#">Profil</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">alle Foren</a>
+			<a class="nav-link" href="alleF.html">alle Foren</a>
 		  </li>
 		  <li class="nav-item">
 			<a class="nav-link" href="#">alle x</a>
