--- a/Serious.html
+++ b/Serious.html
@@ -164,7 +164,7 @@ ul {
 		  <a class="nav-link active" href="Serious.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="index.html">Global</a>
+		  <a class="nav-link" href="index.html">Blog</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link" href="#">Agenda</a>
@@ -173,10 +173,10 @@ ul {
 		  <a class="nav-link" href="#">Profil</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="alleF.html">alle Foren</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="#">alle x</a>
+			<a class="nav-link" href="alleF.html">Austauschecke</a>
+		 </li>
+		 <li class="nav-item">
+			<a class="nav-link" href="#">Multi</a>
 		 
 	  </ul>
 	  
