--- a/index.html
+++ b/index.html
@@ -164,19 +164,19 @@ ul {
 		  <a class="nav-link" href="Serious.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link active" href="index.html">Global</a>
+		  <a class="nav-link active" href="index.html">Blog</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="#">FAQ</a>
+		  <a class="nav-link" href="#">Agenda</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link" href="#">Profil</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="alleF.html">alle Foren</a>
+			<a class="nav-link" href="alleF.html">Austauschecke</a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="#">alle x</a>
+			<a class="nav-link" href="#">Multi</a>
 		  
 	  </ul>
 	  
