--- a/Serious.html
+++ b/Serious.html
@@ -167,16 +167,16 @@ ul {
 		  <a class="nav-link" href="index.html">Blog</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="#">Agenda</a>
+		  <a class="nav-link" href="agenda.html">Agenda</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="#">Profil</a>
+		  <a class="nav-link" href="profil.html">Profil</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="alleF.html">Austauschecke</a>
+			<a class="nav-link" href="Austausch.html">Austauschecke</a>
 		 </li>
 		 <li class="nav-item">
-			<a class="nav-link" href="#">Multi</a>
+			<a class="nav-link" href="multi.html">Multi</a>
 		 
 	  </ul>
 	  
