--- a/startseite.html
+++ b/startseite.html
@@ -161,10 +161,10 @@ ul {
 
 	<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
-		  <a class="nav-link active" href="Serious.html">Startseite</a>
+		  <a class="nav-link active" href="startseite.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="index.html">Blog</a>
+		  <a class="nav-link" href="blog.html">Blog</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link" href="agenda.html">Agenda</a>
