--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ ul {
 
 	<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
-		  <a class="nav-link active" href="startseite.html">Startseite</a>
+		  <a class="nav-link active" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link" href="blog.html">Blog</a>
