--- a/blog.html
+++ b/blog.html
@@ -165,7 +165,7 @@ ul {
 
 	<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
-		  <a class="nav-link" href="startseite.html">Startseite</a>
+		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link active" href="blog.html">Blog</a>
