--- a/Austausch.html
+++ b/Austausch.html
@@ -176,22 +176,22 @@ ul {
 
 	<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
-		  <a class="nav-link" href="Serious.html">Startseite</a>
+		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link " href="index.html">Global</a>
+		  <a class="nav-link " href="blog.html">Blog</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="#">FAQ</a>
+		  <a class="nav-link" href="agenda.html">Agenda</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="#">Profil</a>
+		  <a class="nav-link" href="profil.html">Profil</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link active" href="alleF.html">alle Foren</a>
+			<a class="nav-link active" href="austausch.html">Austauschecke</a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="#">alle x</a>
+			<a class="nav-link" href="multi.html">Multi</a>
 		  
 	  </ul>
 	  
