--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ ul {
 		  <a class="nav-link" href="profil.html">Profil</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="Austausch.html">Austauschecke</a>
+			<a class="nav-link" href="austausch.html">Austauschecke</a>
 		 </li>
 		 <li class="nav-item">
 			<a class="nav-link" href="multi.html">Multi</a>
