--- a/agenda.html
+++ b/agenda.html
@@ -177,7 +177,7 @@ ul {
 		  <a class="nav-link" href="profil.html">Profil</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="Austausch.html">Austauschecke</a>
+			<a class="nav-link" href="austausch.html">Austauschecke</a>
 		  </li>
 		  <li class="nav-item">
 			<a class="nav-link" href="multi.html">Multi</a>
@@ -189,23 +189,16 @@ ul {
 	
 	
 
-<!-- Regeln in ID haben höhere Priorität-->
-	<!-- padding sagt rand zum Feld der Textes, Border ist einfach Rahmen, und Margin sagt Abstand zur Seite -->
 
 
 
-<h3> Sammlung von Allem</h3>
+<h3> Nächste Termine</h3>
 
-<p id="rahmen">
-Sali Du! Gsesch das? Oder Lisisch, oder Körsch...
-</p> 
-
-<img id="rechts2" src="Bild.png" height="187" length="235.8">
 
 
 	<h4> text </h4>
 <p>
-Informations in differen languages:
+20.20.20
 </p>
 
 
@@ -214,11 +207,6 @@ Informations in differen languages:
 
 
 
-<!-- Die Grössen ohne Angabe entsprechen Pixeln-->
-
-<a href= "https://de.wikipedia.org/wiki/Regenw%C3%BCrmer"><img src="RW.png" height="284"; width="710"/> </a>
-
-<a href= "http://www.rechnr.de/farbenrechner">Link zum farbenrechner</a>
 
 
 
