--- a/index.html
+++ b/index.html
@@ -194,12 +194,7 @@ ul {
 
 	<h4> Warum mitmachen?</h4>
 <p id="rahmen">
-Angestrebt werden soll eine grosse Vernetzung von unterschiedlichsten Wesen und deren Interessen
-Freiraum für alle Meinungen mit einem respektvollem Umgang
-Es sollen keine Hierarchien 'herrschen', dennoch wird Wert auf gewisse Grundregeln gelegt. 
-Wer Einwände hat, darf diese gerne äussern.
-
-Ok das wäre cool. Aber. Zuerst wird es wohl einfach ein Blog sein
+BLABLIBLU
 </p> 
 
 <img id="rechts2" src="Bild.png" height="187" length="235.8">
