--- a/links.html
+++ b/links.html
@@ -86,10 +86,7 @@
 			font-size: 20px;
 		}
 
-		h1.rotgruen{
-			background-color: #ff6600;
-			color:#006600;
-		}
+	
 
 		#box{
 			border:5px dotted red;
@@ -152,6 +149,14 @@ ul {
 			width:50% ;
 		}
 		
+
+		.right {
+  			float: right;
+ 			width: 300px;
+ 			border: 3px solid #73AD21;
+			padding: 10px;
+				}
+		
 	</style>
 
 </head>
@@ -166,15 +171,15 @@ ul {
 
 	  
 
-	<a role="button" class="btn btn-info" id="toll" href="https://twitter.com/DaphnukDandzz/">Klick!</a>
+<a role="button" class="btn btn-info" id="toll" href="https://twitter.com/DaphnukDandzz/">Klick!</a>
 	
 
 
-<!-- Die Grössen ohne Angabe entsprechen Pixeln-->
+
 
 <a href= "https://www.youtube.com/channel/UCx8QUVkQ9QWsYpHnopvPoEQ"><img src="RW.png" height="284"; width="710"/> </a>
 
-<a href= "https://www.twitch.tv/daphnuk">Link zum farbenrechner</a>
+<a class="right" href= "https://www.twitch.tv/daphnuk"><img src="smiley.gif"/> </a>
 
 
 
