--- a/links.html
+++ b/links.html
@@ -41,21 +41,7 @@
 			border: 5px dashed black;
 			margin: 50px;
 			margin-bottom: 30px;
-		}
-		h3{
-			margin-left: 40px;
-		}
 
-		h4{
-			background-color: #336666;
-			padding: 10px;
-			border: 2px solid #000066;
-			border-left-color:brown;
-			border-left-style: dotted ;
-			margin-right: 50%;
-			margin-left: 10px;
-		}
-		
 
 		a:link{color:blue;}
 		a:visited{color:pink;}
@@ -115,40 +101,7 @@ div{
 	padding: 5px;
 	padding-left: 20px;
 }
-ul > li{color:saddlebrown}
 
-ul {
-	position: fixed;
-	top: 0;
-	width: 100%;
-  }
-		#border{
-			border: 2px double brown;
-		}
-		#rechts{
-			position: absolute;
-			top:180px;
-			left: 1070px;
-		}
-		#rechts2{
-			position: absolute;
-			top:430px;
-			left: 1070px;
-		}
-
-		#tab{
-			left: 550px;
-			bottom: 180px;
-			position:relative;
-		}
-
-		#table{
-			right: 440px;
-			bottom: 0px;
-			position:relative;
-			width:50% ;
-		}
-		
 
 		.right {
   			float: right;
@@ -169,17 +122,14 @@ ul {
 <body>
 
 
-	  
-
+	<h1> Hellooo </h1>	  
+	<div>
 <a role="button" class="btn btn-info" id="toll" href="https://twitter.com/DaphnukDandzz/">Klick!</a>
+	</div>
 	
+<a href= "https://www.youtube.com/channel/UCx8QUVkQ9QWsYpHnopvPoEQ"><img src="RW.png" height="284"; width="284"/> </a>
 
-
-
-
-<a href= "https://www.youtube.com/channel/UCx8QUVkQ9QWsYpHnopvPoEQ"><img src="RW.png" height="284"; width="710"/> </a>
-
-<a class="right" href= "https://www.twitch.tv/daphnuk"><img src="smiley.gif"/> </a>
+<a class="right" href= "https://www.twitch.tv/daphnuk">TWITCH HERE </a>
 
 
 
