--- a/links.html
+++ b/links.html
@@ -34,7 +34,7 @@
 		}
 
 		h1{
-			background-color:cornsilk;
+			background-color:blue;
 			padding-top:20px;
 			padding-bottom: 20px;
 			padding-left:50px ;
@@ -51,18 +51,6 @@
 		}
 		a:active{background-color: darkorchid;}
 
-
-		table{
-			border: 10px solid black;
-			background-color: yellow;
-		}
-		tr{
-			background-color: red;
-		}
-		td{
-			background-color: rgb(5, 200, 30);
-			border: 1px dashed black;
-		}
 
 		#rahmen{
 			border: 2px solid black;
@@ -102,6 +90,12 @@ div{
 	padding-left: 20px;
 }
 
+		.twitch {
+			float: left;
+ 			width: 30px;
+ 			border: 3px solid #73AD21;
+			padding: 10px;
+				}
 
 		.right {
   			float: right;
@@ -124,12 +118,12 @@ div{
 
 	<h1> Hellooo </h1>	  
 	<div>
-<a role="button" class="btn btn-info" id="toll" href="https://twitter.com/DaphnukDandzz/">Klick!</a>
+<a role="button" class="btn btn-info" id="toll" href="https://twitter.com/DaphnukDandzz/">Twitter</a>
 	</div>
 	
-<a href= "https://www.youtube.com/channel/UCx8QUVkQ9QWsYpHnopvPoEQ"><img src="RW.png" height="284"; width="284"/> </a>
+<a class="right" href= "https://www.youtube.com/channel/UCx8QUVkQ9QWsYpHnopvPoEQ"><img src="RW.png" height="284"; width="284"/> </a>
 
-<a class="right" href= "https://www.twitch.tv/daphnuk">TWITCH HERE </a>
+<a class="twitch" href= "https://www.twitch.tv/daphnuk">TWITCH HERE </a>
 
 
 
