--- a/links.html
+++ b/links.html
@@ -6,11 +6,10 @@
 	Links
 	</title>
 
-<!-- Required meta tags -->
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 <link href="faw/css/all.css" rel="stylesheet">
@@ -38,7 +37,7 @@
 			padding-top:20px;
 			padding-bottom: 20px;
 			padding-left:50px ;
-			border: 5px dashed black;
+			border: 5px double black;
 			margin: 50px;
 			margin-bottom: 30px;
 
@@ -102,6 +101,8 @@ div{
  			width: 300px;
  			border: 3px solid #73AD21;
 			padding: 10px;
+			position: relative;
+			top: 10px;
 				}
 		
 	</style>
