--- a/links.html
+++ b/links.html
@@ -33,7 +33,7 @@
 		}
 
 		h1{
-			background-color:blue;
+			background-color: grey;
 			padding-top:20px;
 			padding-bottom: 20px;
 			padding-left:50px ;
