--- a/links.html
+++ b/links.html
@@ -51,24 +51,6 @@
 		a:active{background-color: darkorchid;}
 
 
-		#rahmen{
-			border: 2px solid black;
-		}
-
-		span{
-			font-size: 20px;
-		}
-
-	
-
-		#box{
-			border:5px dotted red;
-			font-size: 10px;
-			top: 8px;
-			left: 300px;
-			position:absolute;
-		}
-
 		#toll{
 			font-family: fantasy;
 			border: 4px solid black ;
@@ -94,6 +76,8 @@ div{
  			width: 30px;
  			border: 3px solid #73AD21;
 			padding: 10px;
+			position: relative;
+			top: 50px;
 				}
 
 		.right {
@@ -102,7 +86,7 @@ div{
  			border: 3px solid #73AD21;
 			padding: 10px;
 			position: relative;
-			top: 10px;
+			top: 50px;
 				}
 		
 	</style>
