--- a/links.html
+++ b/links.html
@@ -27,7 +27,7 @@
 		}
 
 		body{
-			background-color: red;
+			background-color: maroon;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
@@ -94,31 +94,19 @@ div{
 </head>
 
 
-	
-	
-	
-	
 <body>
 
 
-	<h1> Hellooo </h1>	  
-	<div>
+<h1> Hellooo </h1>	  
+	
 <a role="button" class="btn btn-info" id="toll" href="https://twitter.com/DaphnukDandzz/">Twitter</a>
-	</div>
+	
 	
 <a class="right" href= "https://www.youtube.com/channel/UCx8QUVkQ9QWsYpHnopvPoEQ"><img src="RW.png" height="284"; width="284"/> </a>
 
 <a class="twitch" href= "https://www.twitch.tv/daphnuk">TWITCH HERE </a>
 
 
-
-
-
-<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 
