--- a/links.html
+++ b/links.html
@@ -85,8 +85,8 @@ div{
  			width: 300px;
  			border: 3px solid #73AD21;
 			padding: 10px;
-			position: relative;
-			top: 50px;
+			position: fixed;
+			top: 5000px;
 				}
 		
 	</style>
