--- a/links.html
+++ b/links.html
@@ -83,10 +83,7 @@ div{
 		.right {
   			float: right;
  			width: 300px;
- 			border: 3px solid #73AD21;
 			padding: 10px;
-			position: fixed;
-			top: 5000px;
 				}
 		
 	</style>
@@ -97,7 +94,7 @@ div{
 <body>
 
 
-<h1> Hellooo </h1>	  
+<h1> Hello! Here you will find links to different platforms </h1>	  
 	
 <a role="button" class="btn btn-info" id="toll" href="https://twitter.com/DaphnukDandzz/">Twitter</a>
 	
