--- a/links.html
+++ b/links.html
@@ -62,7 +62,7 @@
 			z-index: 2;
 		}
 
-div{
+div.this {
 	position: absolute;
 	width:200px;
 	top:8px;
@@ -97,7 +97,8 @@ div{
 <h1> Hello! Here you will find links to different platforms </h1>	  
 	
 <a role="button" class="btn btn-info" id="toll" href="https://twitter.com/DaphnukDandzz/">Twitter</a>
-	
+
+	<div class="this"> wo bisch? </div>
 	
 <a class="right" href= "https://www.youtube.com/channel/UCx8QUVkQ9QWsYpHnopvPoEQ"><img src="RW.png" height="284"; width="284"/> </a>
 
