--- a/links.html
+++ b/links.html
@@ -80,7 +80,7 @@ div.this {
 			top: 50px;
 				}
 
-		.right {
+		.yt {
   			float: right;
  			width: 300px;
 			padding: 10px;
@@ -100,7 +100,7 @@ div.this {
 
 	<div class="this"> wo bisch? </div>
 	
-<a class="right" href= "https://www.youtube.com/channel/UCx8QUVkQ9QWsYpHnopvPoEQ"><img src="RW.png" height="284"; width="284"/> </a>
+<a class="yt" href= "https://www.youtube.com/channel/UCx8QUVkQ9QWsYpHnopvPoEQ"><img src="RW.png" height="199"; width="199"/> </a>
 
 <a class="twitch" href= "https://www.twitch.tv/daphnuk">TWITCH HERE </a>
 
