--- a/links.html
+++ b/links.html
@@ -63,13 +63,13 @@
 		}
 
 div.this {
-	position: absolute;
-	width:200px;
-	top:8px;
-	left: 500px;
-	padding: 5px;
-	padding-left: 20px;
-}
+	 position: absolute;
+  	top: 80px;
+  	right: 0;
+  	width: 200px;
+  	height: 100px;
+  	border: 3px solid #73AD21;
+		}
 
 		.twitch {
 			float: left;
