--- a/links.html
+++ b/links.html
@@ -80,7 +80,8 @@ div.this {
 				}
 
 		.yt {
-  			float: right;
+  			position: fixed;
+			float: right;
  			width: 300px;
 			padding: 10px;
 				}
