--- a/links.html
+++ b/links.html
@@ -51,7 +51,7 @@
 		a:active{background-color: darkorchid;}
 
 
-		#toll{
+		#twitter{
 			font-family: fantasy;
 			border: 4px solid black ;
 			color: black;
@@ -96,7 +96,7 @@ div.this {
 
 <h1> Hello! Here you will find links to different platforms </h1>	  
 	
-<a role="button" class="btn btn-info" id="toll" href="https://twitter.com/DaphnukDandzz/">Twitter</a>
+<a role="button" class="btn btn-info" id="twitter" href="https://twitter.com/DaphnukDandzz/">Twitter</a>
 
 <div class="this"> wo bisch? </div>
 	
