--- a/links.html
+++ b/links.html
@@ -45,7 +45,7 @@
 		a:link{color:blue;}
 		a:visited{color:pink;}
 		a:hover{background-color: brown;
-		color: aliceblue;
+		color: maroon;
 		font-weight:bold ;
 		}
 		a:active{background-color: darkorchid;}
