--- a/links.html
+++ b/links.html
@@ -71,7 +71,7 @@ div.this {
 		}
 
 		.twitch {
-			float: left;
+			float: right;
  			width: 30px;
  			border: 3px solid #73AD21;
 			padding: 10px;
@@ -81,9 +81,9 @@ div.this {
 
 		.yt {
   			position: fixed;
-			float: right;
  			width: 300px;
 			padding: 10px;
+			left: 200px;
 				}
 		
 	</style>
