--- a/links.html
+++ b/links.html
@@ -94,7 +94,7 @@ div.this {
 <body>
 
 
-<h1> Hello! Here you will find links to different platforms </h1>	  
+<h1> Hello! Here is Daphne's link collection </h1>	  
 	
 <a role="button" class="btn btn-info" id="twitter" href="https://twitter.com/DaphnukDandzz/">Twitter</a>
 
