--- a/links.html
+++ b/links.html
@@ -44,9 +44,8 @@
 
 		a:link{color:blue;}
 		a:visited{color:pink;}
-		a:hover{background-color: brown;
+		a:hover{background-color: maroon;
 		color: maroon;
-		font-weight:bold ;
 		}
 		a:active{background-color: darkorchid;}
 
