--- a/links.html
+++ b/links.html
@@ -93,7 +93,7 @@ div.this {
 <body>
 
 
-<h1> Hello! Here is Daphne's link collection </h1>	  
+<h1> Here are some links </h1>	  
 	
 <a role="button" class="btn btn-info" id="twitter" href="https://twitter.com/DaphnukDandzz/">Twitter</a>
 
@@ -103,7 +103,7 @@ div.this {
 
 <a class="twitch" href= "https://www.twitch.tv/daphnuk">TWITCH HERE </a>
 
-	<p> ddddddddddddddddddddddddd </p>
+	<p> - Daphne </p>
 </body>
 
 
