--- a/links.html
+++ b/links.html
@@ -38,7 +38,7 @@
 			padding-bottom: 20px;
 			padding-left:50px ;
 			border: 5px double black;
-			margin: 50px;
+			margin: 50%;
 			margin-bottom: 30px;
 
 
@@ -62,7 +62,7 @@
 		}
 	
 	.this {
-	position: absolute;
+	position: relative;
   	top: 800px;
   	right: 0;
   	width: 200px;
