--- a/links.html
+++ b/links.html
@@ -38,8 +38,10 @@
 			padding-bottom: 20px;
 			padding-left:50px ;
 			border: 5px double black;
-			margin: 50%;
+			margin: 50px;
 			margin-bottom: 30px;
+			width: 50%
+			}
 
 
 		a:link{color:blue;}
