--- a/links.html
+++ b/links.html
@@ -24,6 +24,7 @@
 			background-color:#660033;
 			padding: 10px;
 			margin-left: 20px;
+			text-align: center;
 		}
 
 		body{
@@ -41,6 +42,7 @@
 			margin: 50px;
 			margin-bottom: 30px;
 			width: 70%
+			text-align: center;
 			}
 
 
