--- a/links.html
+++ b/links.html
@@ -41,7 +41,7 @@
 			border: 5px double black;
 			margin: 50px;
 			margin-bottom: 30px;
-			width: 100%;
+			width: 100px;
 			text-align: center;
 			}
 
