--- a/austausch.html
+++ b/austausch.html
@@ -22,7 +22,7 @@
 			font-weight: 600;
 			width:60%;
 			height: 150px;
-			background-color:#660033;
+			background-color:#C8D9A2;
 			padding: 10px;
 			margin-left: 20px;
 		}
@@ -203,24 +203,11 @@ ul {
 
 <h3> Sammlung von Allem</h3>
 
-	<h4> Warum mitmachen?</h4>
 <p id="rahmen">
-Sali Du! Gsesch das? Oder Lisisch, oder Körsch...
+Sortierte Anhäufung von Informationen
 </p> 
 
-
-<table id="t01">
-  <tr>
-    <th>Firstname</th>
-    <th>Lastname</th>
-    <th>Age</th>
-  </tr>
-  <tr>
-    <td>Eve</td>
-    <td>Jackson</td>
-    <td>94</td>
-  </tr>
-</table>
+<a href="https://daphnuk.github.io/demokratie.html">Demokratie</a>
 
 
 <br /> 
