--- a/index.html
+++ b/index.html
@@ -192,24 +192,15 @@ ul {
 
 <h3> Sammlung von Allem</h3>
 
-	<h4> Warum mitmachen?</h4>
+	<h4> Was soll das hier?</h4>
 <p id="rahmen">
-BLABLIBLU
+
+Dies ist einfach eine Ansammlung unterschiedlicher Themen und Quellen. Denn neues 'Wissen' ist toll. Ein Handy ohne zu viele geöffnete Tabs auch.
+	
 </p> 
 
 <img id="rechts2" src="Bild.png" height="187" length="235.8">
 
-
-
-<p>
-Trying to get this in as many languages as possible
-</p>
-
-
-	<h4> text </h4>
-<p>
-Solang das funktioniert isch doch guet
-</p>
 
 
 
