--- a/MetzgereiDHF.html
+++ b/MetzgereiDHF.html
@@ -200,8 +200,11 @@ ul {
 <h3> MetzgereiDHF </h3>
 
 <p id="rahmen">
- <a href="https://beilerei.com/rezepte-wissen/fleischkunde/fleischkunde-alle-rindfleischsorten-auf-einen-blick"> Übersicht </a>
-
+<a href="https://beilerei.com/rezepte-wissen/fleischkunde/fleischkunde-alle-rindfleischsorten-auf-einen-blick"> Übersicht </a>
+<a href="https://www.rewe.de/lexikon/fleisch/k"> LMLRewe Fleisch </a>
+<a href="https://www.lebensmittellexikon.de/f0000200.php"> LML Fleisch </a>	
+<a href="https://lebensmittel-warenkunde.de/lebensmittel/fleisch.html"> LMLWarenkunde Fleisch </a>
+	
 </p> 
 
 
