--- a/index.html
+++ b/index.html
@@ -164,19 +164,19 @@ ul {
 		  <a class="nav-link active" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="blog.html">Blog</a>
+		  <a class="nav-link" href="blog.html">Rayons</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="agenda.html">Agenda</a>
+		  <a class="nav-link" href="agenda.html">Praxisaufgaben</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="profil.html">Profil</a>
+		  <a class="nav-link" href="profil.html">Tipps und Hinweise</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="austausch.html">Austauschecke</a>
+			<a class="nav-link" href="austausch.html">Berufsschule</a>
 		 </li>
 		 <li class="nav-item">
-			<a class="nav-link" href="multi.html">Multi</a>
+			<a class="nav-link" href="multi.html">Forum/a>
 		 
 	  </ul>
 	  
