--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@ ul {
 		  <a class="nav-link active" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="blog.html">Rayons</a>
+		  <a class="nav-link" href="blog.html">Links</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="agenda.html">Praxisaufgaben</a>
+		  <a class="nav-link" href="agenda.html">Zusammenfassungen</a>
 		</li>
 		<li class="nav-item">
 		  <a class="nav-link" href="profil.html">Tipps und Hinweise</a>
