--- a/index.html
+++ b/index.html
@@ -164,19 +164,19 @@ ul {
 		  <a class="nav-link active" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="blog.html">Links</a>
+		  <a class="nav-link" href="blog.html">Links Ausbildung</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="agenda.html">Zusammenfassungen</a>
+		  <a class="nav-link" href="agenda.html">Links Sonstiges</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="profil.html">Tipps und Hinweise</a>
+		  <a class="nav-link" href="profil.html">Zusammenfassungen</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="austausch.html">Berufsschule</a>
+			<a class="nav-link" href="austausch.html">Lernen</a>
 		 </li>
 		 <li class="nav-item">
-			<a class="nav-link" href="multi.html">Forum/a>
+			<a class="nav-link" href="multi.html">Forum</a>
 		 
 	  </ul>
 	  
