--- a/blog.html
+++ b/blog.html
@@ -168,21 +168,23 @@ ul {
 		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link active" href="blog.html">Blog</a>
+		  <a class="nav-link active" href="blog.html">aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="agenda.html">Agenda</a>
+		  <a class="nav-link" href="agenda.html">Sammlung</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="profil.html">Profil</a>
+		  <a class="nav-link" href="profil.html">Resultate</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="austausch.html">Austauschecke</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="multi.html">Multi</a>
-		  
+			<a class="nav-link" href="austausch.html">Speichern</a>
+		 </li>'
+		 <li class="nav-item">
+			<a class="nav-link" href="multi.html">Links</a>
+		 
 	  </ul>
+	  
+
 	  
 
 	<a role="button" class="btn btn-info" id="toll" href="https://www.watson.ch/">Klick!</a>
