--- a/blog.html
+++ b/blog.html
@@ -154,6 +154,32 @@ ul {
 		
 	</style>
 
+	
+	.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background: #ddd;
+  color: black;
+}
+
+	
+	
 </head>
 
 
@@ -163,7 +189,7 @@ ul {
 	
 <body>
 
-	<ul class="nav nav-tabs justify-content-center">
+	<ul class="navbar">
 		<li class="nav-item">
 		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
@@ -199,13 +225,11 @@ ul {
 <h3> Sammlung von Allem</h3>
 
 <p id="rahmen">
-Sali Du! Gsesch das? Oder Lisisch, oder Körsch...
+Gebärdensprache lernen
 </p> 
 
-<img id="rechts2" src="Bild.png" height="187" length="235.8">
 
 
-	<h4> text </h4>
 <p>
 Informations in differen languages:
 </p>
