--- a/blog.html
+++ b/blog.html
@@ -44,6 +44,7 @@
 		}
 		h3{
 			margin-left: 40px;
+			position: relative;
 		}
 
 		h4{
@@ -89,25 +90,6 @@
 		h1.rotgruen{
 			background-color: #ff6600;
 			color:#006600;
-		}
-
-		#box{
-			border:5px dotted red;
-			font-size: 10px;
-			top: 8px;
-			left: 300px;
-			position:absolute;
-		}
-
-		#toll{
-			font-family: fantasy;
-			border: 4px solid black ;
-			color: black;
-			position: fixed;
-			right:20px ;
-			top: 8px;
-			left: 85%;
-			z-index: 2;
 		}
 
 div{
