Update and rename blog.html to aktuell.html

--- a/aktuell.html
+++ b/aktuell.html
@@ -177,16 +177,16 @@ ul {
 		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link active" href="blog.html">aktuelle Projekte</a>
+		  <a class="nav-link active" href="aktuell.html">aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="agenda.html">Sammlung</a>
+		  <a class="nav-link" href="agenda.html">Projektideen</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="profil.html">Resultate</a>
+		  <a class="nav-link" href="profil.html">Abgeschlossenes</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="austausch.html">Speichern</a>
+			<a class="nav-link" href="austausch.html">Anhäufung</a>
 		 </li>'
 		 <li class="nav-item">
 			<a class="nav-link" href="multi.html">Links</a>
