Update and rename agenda.html to ideen.html

--- a/ideen.html
+++ b/ideen.html
@@ -163,25 +163,25 @@ ul {
 	
 <body>
 
-	<ul class="nav nav-tabs justify-content-center">
+		<ul class="navbar">
 		<li class="nav-item">
 		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="blog.html">Blog</a>
+		  <a class="nav-link" href="aktuell.html">aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link active" href="agenda.html">Agenda</a>
+		  <a class="nav-link active" href="ideen.html">Projektideen</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="profil.html">Profil</a>
+		  <a class="nav-link" href="abgeschlossenes.html">Abgeschlossenes</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="austausch.html">Austauschecke</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="multi.html">Multi</a>
-		  
+			<a class="nav-link" href="anhäufung.html">Anhäufung</a>
+		 </li>'
+		 <li class="nav-item">
+			<a class="nav-link" href="links.html">Links</a>
+		 
 	  </ul>
 	  
 
