--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ ul {
 
 <body>
 
-	<ul class="nav nav-tabs justify-content-center">
+		<ul class="navbar">
 		<li class="nav-item">
 		  <a class="nav-link active" href="index.html">Startseite</a>
 		</li>
@@ -167,16 +167,16 @@ ul {
 		  <a class="nav-link" href="aktuell.html">aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="agenda.html">Projektideen</a>
+		  <a class="nav-link" href="ideen.html">Projektideen</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="profil.html">Abgeschlossenes</a>
+		  <a class="nav-link" href="abgeschlossenes.html">Abgeschlossenes</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="austausch.html">Anhäufung</a>
+			<a class="nav-link" href="anhäufung.html">Anhäufung</a>
 		 </li>'
 		 <li class="nav-item">
-			<a class="nav-link" href="multi.html">Links</a>
+			<a class="nav-link" href="links.html">Links</a>
 		 
 	  </ul>
 	  
