--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ ul {
 
 <body>
 
-		<ul class="navbar">
+		<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
 		  <a class="nav-link active" href="index.html">Startseite</a>
 		</li>
