--- a/anhäufung.html
+++ b/anhäufung.html
@@ -174,24 +174,24 @@ ul {
 
 <body>
 
-	<ul class="nav nav-tabs justify-content-center">
+	<ul class="navbar">
 		<li class="nav-item">
 		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="blog.html">aktuelle Projekte</a>
+		  <a class="nav-link" href="aktuell.html">aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="agenda.html">Sammlung</a>
+		  <a class="nav-link" href="ideen.html">Projektideen</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="profil.html">Resultate</a>
+		  <a class="nav-link" href="abgeschlossenes.html">Abgeschlossenes</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link active" href="austausch.html">Speichern</a>
+			<a class="nav-link active" href="anhäufung.html">Anhäufung</a>
 		 </li>'
 		 <li class="nav-item">
-			<a class="nav-link" href="multi.html">Links</a>
+			<a class="nav-link" href="links.html">Links</a>
 		 
 	  </ul>
 	  
