--- a/links.html
+++ b/links.html
@@ -88,6 +88,27 @@
 			left: 500px;
 				}
 		
+	<ul class="navbar">
+		<li class="nav-item">
+		  <a class="nav-link" href="index.html">Startseite</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="aktuell.html">aktuelle Projekte</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="ideen.html">Projektideen</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="abgeschlossenes.html">Abgeschlossenes</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="anhäufung.html">Anhäufung</a>
+		 </li>'
+		 <li class="nav-item">
+			<a class="nav-link active" href="links.html">Links</a>
+		 
+	  </ul>
+		
 	</style>
 
 </head>
