--- a/aktuell.html
+++ b/aktuell.html
@@ -180,16 +180,16 @@ ul {
 		  <a class="nav-link active" href="aktuell.html">aktuelle Projekte</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="agenda.html">Projektideen</a>
+		  <a class="nav-link" href="ideen.html">Projektideen</a>
 		</li>
 		<li class="nav-item">
-		  <a class="nav-link" href="profil.html">Abgeschlossenes</a>
+		  <a class="nav-link" href="abgeschlossenes.html">Abgeschlossenes</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="austausch.html">Anhäufung</a>
+			<a class="nav-link" href="anhäufung.html">Anhäufung</a>
 		 </li>'
 		 <li class="nav-item">
-			<a class="nav-link" href="multi.html">Links</a>
+			<a class="nav-link" href="links.html">Links</a>
 		 
 	  </ul>
 	  
