--- a/index.html
+++ b/index.html
@@ -190,15 +190,40 @@ ul {
 
 <h1 class='rotgruen' id="rahmen"> Willkommen</h1>
 
-<h3> Sammlung von Allem</h3>
 
-	<h4> Was soll das hier?</h4>
+	<h4> aktuelle Projekte</h4>
 <p id="rahmen">
 
-Dies ist einfach eine Ansammlung unterschiedlicher Themen und Quellen. Denn neues 'Wissen' ist toll. Ein Handy ohne zu viele geöffnete Tabs auch.
+An welchen Themen arbeite ich momentan? 
+Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen.
 	
 </p> 
 
+	<h4>Projektideen</h4>
+<p id="rahmen">
+
+Alles, was ich vielleicht einmal anschauen werde.
+	
+</p> 
+	<h4> Abgeschlossenes</h4>
+<p id="rahmen">
+	
+Welche Themen habe ich beendet oder beiseitegelegt?
+	
+</p> 
+	<h4> Anhäufung</h4>
+<p id="rahmen">
+
+Alle Links und Dokumente die ich irgend einmal anschauen möchte.
+	
+</p> 
+	<h4> Links</h4>
+<p id="rahmen">
+
+Verlinkungen zu meinen Konten als Übersicht
+	
+</p> 
+	
 <img id="rechts2" src="Bild.png" height="187" length="235.8">
 
 
