--- a/aktuell.html
+++ b/aktuell.html
@@ -3,7 +3,7 @@
     
 <head>
 	<title>
-	Projekt
+	was läuft gerade
 	</title>
 
 <!-- Required meta tags -->
@@ -220,15 +220,6 @@ Informations in differen languages:
 
 
 <br /> 
-
-
-
-<!-- Die Grössen ohne Angabe entsprechen Pixeln-->
-
-<a href= "https://de.wikipedia.org/wiki/Regenw%C3%BCrmer"><img src="RW.png" height="284"; width="710"/> </a>
-
-<a href= "http://www.rechnr.de/farbenrechner">Link zum farbenrechner</a>
-
 
 
 
