--- a/abgeschlossenes.html
+++ b/abgeschlossenes.html
@@ -3,7 +3,7 @@
     
 <head>
 	<title>
-	Projekt
+	das war einmal
 	</title>
 
 <!-- Required meta tags -->
@@ -199,8 +199,6 @@ ul {
 <p id="rahmen">
 Sali Du! Gsesch das? Oder Lisisch, oder Körsch...
 </p> 
-
-<img id="rechts2" src="Bild.png" height="187" length="235.8">
 
 
 	<h4> text </h4>
