--- a/anhäufung.html
+++ b/anhäufung.html
@@ -3,7 +3,7 @@
     
 <head>
 	<title>
-	Projekt
+	hehehe
 	</title>
 
 <!-- Required meta tags -->
@@ -197,8 +197,6 @@ ul {
 	  
 
 
-	<a role="button" class="btn btn-info" id="toll" href="https://www.watson.ch/">Klick!</a>
-	
 
 <h1 class='rotgruen' id="rahmen"> Willkommen</h1>
 
@@ -208,7 +206,6 @@ ul {
 Sortierte Anhäufung von Informationen
 </p> 
 
-<a href="https://daphnuk.github.io/demokratie.html">Demokratie</a>
 	
 <a href="https://daphnuk.github.io/MetzgereiDHF.html">MetzgereiDHF</a>
 
@@ -217,11 +214,6 @@ Sortierte Anhäufung von Informationen
 
 
 
-
-
-
-
-<!--Prinzip der Vererbung im Sytle Teil (zuerst table dann tr dann td)-->
 
 
 
