--- a/anhäufung.html
+++ b/anhäufung.html
@@ -209,7 +209,13 @@ Sortierte Anhäufung von Informationen
 	
 <a href="https://daphnuk.github.io/MetzgereiDHF.html">MetzgereiDHF</a>
 
+<a href="http://kristallin.de/gesteine/index.htm#Anker1">http://kristallin.de/gesteine/index.htm#Anker1</a>
+<a href="https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/">https://starwarsgeschenke.de/star-wars-filme-schauen-reihenfolge/</a>
+<a href="https://twitter.com/pegasusspiele/status/1447223647094120459?t=RPn8Onxz7yyYa-Ai-wyCbw&s=08">https://twitter.com/pegasusspiele/status/1447223647094120459?t=RPn8Onxz7yyYa-Ai-wyCbw&s=08</a>
+<a href="link">Text</a>
+<a href="link">Text</a>
 
+	
 <br /> 
 
 
