--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Alle Links und Dokumente die ich irgend einmal anschauen möchte.
 	<h4> Links</h4>
 <p id="rahmen">
 
-Verlinkungen zu meinen Konten als Übersicht
+Verlinkungen zu meinen Konten und wichtigen Seiten als Übersicht
 	
 </p> 
 	
