--- a/ideen.html
+++ b/ideen.html
@@ -118,13 +118,40 @@ div{
 	padding: 5px;
 	padding-left: 20px;
 }
+		
 ul > li{color:saddlebrown}
 
 ul {
-	position: fixed;
-	top: 0;
-	width: 100%;
-  }
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+		
 		#border{
 			border: 2px double brown;
 		}
