--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 			font-weight: 600;
 			width:60%;
 			height: 150px;
-			background-color:#660033;
+			background-color:#083A62;
 			padding: 10px;
 			margin-left: 20px;
 		}
 
 		body{
-			background-color: red;
+			background-color: #6A6E71;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
