--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 		}
 
 		body{
-			background-color: #6A6E71;
+			background-color: #310010;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
 
 		h1{
-			background-color:cornsilk;
+			background-color:#163C0F;
 			padding-top:20px;
 			padding-bottom: 20px;
 			padding-left:50px ;
@@ -47,11 +47,9 @@
 		}
 
 		h4{
-			background-color: #336666;
+			background-color: #163C0F;
 			padding: 10px;
 			border: 2px solid #000066;
-			border-left-color:brown;
-			border-left-style: dotted ;
 			margin-right: 50%;
 			margin-left: 10px;
 		}
