--- a/aktuell.html
+++ b/aktuell.html
@@ -198,24 +198,16 @@ ul {
 
 	<a role="button" class="btn btn-info" id="toll" href="https://www.watson.ch/">Klick!</a>
 	
-	
 
-<!-- Regeln in ID haben höhere Priorität-->
-	<!-- padding sagt rand zum Feld der Textes, Border ist einfach Rahmen, und Margin sagt Abstand zur Seite -->
-
-
-
-<h3> Sammlung von Allem</h3>
+<h3> Die aktuellen Projekte</h3>
 
 <p id="rahmen">
-Gebärdensprache lernen
+Gebärdensprache lernen <br/>
+Food waste
 </p> 
 
 
 
-<p>
-Informations in differen languages:
-</p>
 
 
 
