--- a/aktuell.html
+++ b/aktuell.html
@@ -127,7 +127,7 @@ ul.topnav li a {
   text-decoration: none;
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #111;}
+ul.topnav li a:hover:not(.active) {background-color: blue;}
 
 ul.topnav li a.active {background-color: #04AA6D;}
 
@@ -168,28 +168,7 @@ ul.topnav li a.active {background-color: #04AA6D;}
 			width:50% ;
 		}
 			
-	.navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
 
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.navbar a:hover {
-  background: #ddd;
-  color: black;
-}
 	</style>
 
 
