--- a/aktuell.html
+++ b/aktuell.html
@@ -108,39 +108,6 @@ ul {
 	top: 0;
 	width: 100%;
   }
-		
-		ul.topnav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-ul.topnav li {float: left;}
-
-ul.topnav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-ul.topnav li a:hover:not(.active) {background-color: blue;}
-
-ul.topnav li a.active {background-color: #04AA6D;}
-
-
-@media screen and (max-width: 600px) {
-  ul.topnav li.right, 
-  ul.topnav li {float: none;}
-}
-
-.active {
-  background-color: #04AA6D;
-}
-		
 		#border{
 			border: 2px double brown;
 		}
@@ -184,7 +151,7 @@ ul.topnav li a.active {background-color: #04AA6D;}
 	
 <body>
 
-	<ul class="navbar">
+	<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
 		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
