--- a/ideen.html
+++ b/ideen.html
@@ -219,13 +219,12 @@ ul.topnav li a.active {background-color: #04AA6D;}
 
 
 
-<h3> Nächste Termine</h3>
+<h3> Ganz viele Ideen und Gedanken </h3>
 
 
 
-	<h4> text </h4>
 <p>
-20.20.20
+ehm
 </p>
 
 
