--- a/aktuell.html
+++ b/aktuell.html
@@ -101,13 +101,14 @@ div{
 	padding: 5px;
 	padding-left: 20px;
 }
-ul > li{color:saddlebrown}
+ul > li{color:black;
+	background-color: blue;
+		}
 
 ul {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	color: black;
   }
 		
 		
