--- a/aktuell.html
+++ b/aktuell.html
@@ -183,25 +183,25 @@ ul {
 
 <p id="rahmen">
 Gebärdensprache lernen <br/>
-Food waste
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-	s
-</p> 
+Food waste <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+	s <br/>
+</p>  
 
 
 
