--- a/anhäufung.html
+++ b/anhäufung.html
@@ -189,7 +189,7 @@ ul {
 		</li>
 		<li class="nav-item">
 			<a class="nav-link active" href="anhäufung.html">Anhäufung</a>
-		 </li>'
+		 </li>
 		 <li class="nav-item">
 			<a class="nav-link" href="links.html">Links</a>
 		 
@@ -200,7 +200,7 @@ ul {
 
 <h1 class='rotgruen' id="rahmen"> Willkommen</h1>
 
-<h3> Sammlung von Allem</h3>
+<h3> Alle Ideen, Gedanken und Links</h3>
 
 <p id="rahmen">
 Sortierte Anhäufung von Informationen
@@ -217,14 +217,20 @@ Sortierte Anhäufung von Informationen
 
 <table>
   <tr>
-    <th>Job</th>
-    <th>Interesse</th>
+    <th>Job/Schule</th>
+    <th>Ernstes</th>
     <th>Spass</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
+    <td>
+	    <ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+	  </td>
     <td><a href="http://kristallin.de/gesteine/index.htm#Anker1">http://kristallin.de/gesteine/index.htm#Anker1</a> </td>
-    <td>Germany</td>
+    <td>Spili</td>
   </tr>
   <tr>
     <td>Centro comercial Moctezuma</td>
