--- a/anhäufung.html
+++ b/anhäufung.html
@@ -222,15 +222,14 @@ Sortierte Anhäufung von Informationen
     <th>Spass</th>
   </tr>
   <tr>
-    <td>
-	    <ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>
-	  </td>
-    <td><a href="http://kristallin.de/gesteine/index.htm#Anker1">http://kristallin.de/gesteine/index.htm#Anker1</a> </td>
-    <td>Spili</td>
+ 	<td>
+	Abchreiber <br /> 
+	irgendwas anderes<br /> 
+  	</td>
+   
+	<td><a href="http://kristallin.de/gesteine/index.htm#Anker1">http://kristallin.de/gesteine/index.htm#Anker1</a> </td>
+    
+	<td>Spili</td>
   </tr>
   <tr>
     <td>Centro comercial Moctezuma</td>
