--- a/abgeschlossenes.html
+++ b/abgeschlossenes.html
@@ -179,31 +179,24 @@ ul {
 		<li class="nav-item">
 			<a class="nav-link" href="anhäufung.html">Anhäufung</a>
 		 </li>
-		 <li class="nav-item">
-			<a class="nav-link" href="links.html">Links</a>
-		 
+
 	  </ul>
 	  
 
-	<a role="button" class="btn btn-info" id="toll" href="https://www.watson.ch/">Klick!</a>
+
+	<h4> Abgeschlossene Arbeiten, Projekte  </h4>
 	
-	
-
-<!-- Regeln in ID haben höhere Priorität-->
-	<!-- padding sagt rand zum Feld der Textes, Border ist einfach Rahmen, und Margin sagt Abstand zur Seite -->
-
-
-
-
-
 <p id="rahmen">
-Sali Du! Gsesch das? Oder Lisisch, oder Körsch...
+
+Ordner Titel usw.	
+
 </p> 
 
 
-	<h4> text </h4>
+	<h4> Nicht weiterverfolgt </h4>
 <p>
-Informations in differen languages:
+- 
+- 
 </p>
 
 
