--- a/aktuell.html
+++ b/aktuell.html
@@ -171,8 +171,6 @@ ul {
 		<li class="nav-item">
 			<a class="nav-link" href="anhäufung.html">Anhäufung</a>
 		 </li>
-		 <li class="nav-item">
-			<a class="nav-link" href="links.html">Links</a>
 		 
 	  </ul>
 	  
@@ -184,23 +182,9 @@ ul {
 <p id="rahmen">
 Gebärdensprache lernen <br/>
 Food waste <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
-	s <br/>
+Vereinssuche <br/>
+Musik <br/>
+Politik <br/>
 </p>  
 
 
