--- a/anhäufung.html
+++ b/anhäufung.html
@@ -3,7 +3,7 @@
     
 <head>
 	<title>
-	hehehe
+	so viel Idee
 	</title>
 
 <!-- Required meta tags -->
@@ -190,9 +190,7 @@ ul {
 		<li class="nav-item">
 			<a class="nav-link active" href="anhäufung.html">Anhäufung</a>
 		 </li>
-		 <li class="nav-item">
-			<a class="nav-link" href="links.html">Links</a>
-		 
+
 	  </ul>
 	  
 
