--- a/index.html
+++ b/index.html
@@ -119,9 +119,14 @@ div{
 ul > li{color:saddlebrown}
 
 ul {
-	position: fixed;
-	top: 0;
-	width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
   }
 		#border{
 			border: 2px double brown;
@@ -177,12 +182,6 @@ ul {
 	  </ul>
 	  
 
-	<a role="button" class="btn btn-info" id="toll" href="https://www.watson.ch/">Klick!</a>
-	
-	
-
-<!-- Regeln in ID haben höhere Priorität-->
-	<!-- padding sagt rand zum Feld der Textes, Border ist einfach Rahmen, und Margin sagt Abstand zur Seite -->
 
 <h1 class='rotgruen' id="rahmen"> Willkommen</h1>
 
