--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 		}
 
 		body{
-			background-color: #310010;
+			background-color: #FBEFF2;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
 
 		h1{
-			background-color:#163C0F;
+			background-color:#CEF6F5;
 			padding-top:20px;
 			padding-bottom: 20px;
 			padding-left:50px ;
