--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		}
 
 		body{
-			background-color: #FBEFF2;
+			background-color: #120A2A;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
@@ -183,7 +183,7 @@ ul {
 	  
 
 
-<h1 class='rotgruen' id="rahmen"> Willkommen</h1>
+<h1> Willkommen</h1>
 
 
 	<h4> aktuelle Projekte</h4>
