--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		}
 
 		body{
-			background-color: #120A2A;
+			background-color: #070B19;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
