--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			font-weight: 600;
 			width:60%;
 			height: 150px;
-			background-color:#083A62;
+			background-color:#19070B;
 			padding: 10px;
 			margin-left: 20px;
 		}
@@ -38,7 +38,6 @@
 			padding-top:20px;
 			padding-bottom: 20px;
 			padding-left:50px ;
-			border: 5px dashed black;
 			margin: 50px;
 			margin-bottom: 30px;
 		}
@@ -47,9 +46,8 @@
 		}
 
 		h4{
-			background-color: #163C0F;
+			background-color: #0B3B2E;
 			padding: 10px;
-			border: 2px solid #000066;
 			margin-right: 50%;
 			margin-left: 10px;
 		}
