--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			font-family:'Courier New', Courier, monospace;
 			font-size:15px ;
 			font-weight: 600;
-			font-color: #E0F8F1;
+			color: #E0F8F1;
 			width:60%;
 			height: 150px;
 			background-color:#19070B;
