--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: black;
   position: fixed;
   top: 0;
   width: 100%;
