--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		
 
 		a:link{color:blue;}
-		a:visited{color:pink;}
+		a:visited{color:blue;}
 		a:hover{background-color: brown;
 		color: aliceblue;
 		font-weight:bold ;
