--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 		}
 		
 
-		a:link{color:blue;}
-		a:visited{color:blue;}
-		a:hover{background-color: brown;
+		a:link{color:white;}
+		a:visited{color:white;}
+		a:hover{background-color: #19070B;
 		color: aliceblue;
 		font-weight:bold ;
 		}
