--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
 		a:link{color:white;}
 		a:visited{color:white;}
-		a:hover{background-color: #19070B;
+		a:hover{background-color: #2A0A12;
 		color: aliceblue;
 		}
-		a:active{background-color: darkorchid;}
+		a:active{background-color: yellow;}
 
 
 		table{
