--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 		a:link{color:white;}
 		a:visited{color:white;}
-		a:hover{background-color: #2A0A12;
+		a:hover{background-color: #19070B;
 		color: aliceblue;
 		}
 		a:active{background-color: yellow;}
