--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		a:hover{background-color: #19070B;
 		color: aliceblue;
 		}
-		a:active{background-color: yellow;}
+		a:active{background-color: #0A2A12;}
 
 
 		table{
