--- a/abgeschlossenes.html
+++ b/abgeschlossenes.html
@@ -57,13 +57,12 @@
 		}
 		
 
-		a:link{color:blue;}
-		a:visited{color:pink;}
-		a:hover{background-color: brown;
+		a:link{color:white;}
+		a:visited{color:white;}
+		a:hover{background-color: #19070B;
 		color: aliceblue;
-		font-weight:bold ;
 		}
-		a:active{background-color: darkorchid;}
+		a:active{background-color: #0A2A12;}
 
 
 		table{
