--- a/aktuell.html
+++ b/aktuell.html
@@ -64,7 +64,8 @@
 		a:hover{background-color: #19070B;
 		color: aliceblue;
 		}
-		a:active{background-color: #0A2A12;}
+		a:active{background-color: #0A2A12;
+		}
 
 
 		table{
