--- a/ideen.html
+++ b/ideen.html
@@ -121,39 +121,18 @@ div{
 }
 		
 
+ul > li{color:saddlebrown}
 
-ul.topnav {
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
-}
-
-ul.topnav li {float: left;}
-
-ul.topnav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-ul.topnav li a:hover:not(.active) {background-color: #111;}
-
-ul.topnav li a.active {background-color: #04AA6D;}
-
-
-@media screen and (max-width: 600px) {
-  ul.topnav li.right, 
-  ul.topnav li {float: none;}
-}
-
-.active {
-  background-color: #04AA6D;
-}
-		
+  background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  }	
 		#border{
 			border: 2px double brown;
 		}
