--- a/anhäufung.html
+++ b/anhäufung.html
@@ -118,12 +118,18 @@ div{
 	padding: 5px;
 	padding-left: 20px;
 }
+		
 ul > li{color:saddlebrown}
 
 ul {
-	position: fixed;
-	top: 0;
-	width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
   }
 		#border{
 			border: 2px double brown;
