--- a/aktuell.html
+++ b/aktuell.html
@@ -101,14 +101,18 @@ div{
 	padding: 5px;
 	padding-left: 20px;
 }
-ul > li{color:black;
-	background-color: blue;
-		}
+
+ul > li{color:saddlebrown}
 
 ul {
-	position: fixed;
-	top: 0;
-	width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
   }
 		
 		
