--- a/ideen.html
+++ b/ideen.html
@@ -171,7 +171,7 @@ ul {
 	
 <body>
 
-		<ul class="navbar">
+		<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
 		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
