--- a/anhäufung.html
+++ b/anhäufung.html
@@ -180,7 +180,7 @@ ul {
 
 <body>
 
-	<ul class="navbar">
+		<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
 		  <a class="nav-link" href="index.html">Startseite</a>
 		</li>
