--- a/ideen.html
+++ b/ideen.html
@@ -16,30 +16,29 @@
 <link href="faw/css/all.css" rel="stylesheet">
 
 	<style type="text/css">
-		p{
+			p{
 			font-family:'Courier New', Courier, monospace;
 			font-size:15px ;
 			font-weight: 600;
+			color: #E0F8F1;
 			width:60%;
 			height: 150px;
-			background-color:#660033;
+			background-color:#19070B;
 			padding: 10px;
 			margin-left: 20px;
 		}
 
 		body{
-			background-color: red;
+			background-color: #070B19;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
-			margin: 0;
 		}
 
 		h1{
-			background-color:cornsilk;
+			background-color:#CEF6F5;
 			padding-top:20px;
 			padding-bottom: 20px;
 			padding-left:50px ;
-			border: 5px dashed black;
 			margin: 50px;
 			margin-bottom: 30px;
 		}
@@ -48,11 +47,8 @@
 		}
 
 		h4{
-			background-color: #336666;
+			background-color: #0B3B2E;
 			padding: 10px;
-			border: 2px solid #000066;
-			border-left-color:brown;
-			border-left-style: dotted ;
 			margin-right: 50%;
 			margin-left: 10px;
 		}
@@ -119,8 +115,6 @@ div{
 	padding: 5px;
 	padding-left: 20px;
 }
-		
-
 ul > li{color:saddlebrown}
 
 ul {
@@ -132,7 +126,7 @@ ul {
   position: fixed;
   top: 0;
   width: 100%;
-  }	
+  }
 		#border{
 			border: 2px double brown;
 		}
