--- a/abgeschlossenes.html
+++ b/abgeschlossenes.html
@@ -16,29 +16,29 @@
 <link href="faw/css/all.css" rel="stylesheet">
 
 	<style type="text/css">
-		p{
+			p{
 			font-family:'Courier New', Courier, monospace;
 			font-size:15px ;
 			font-weight: 600;
+			color: #E0F8F1;
 			width:60%;
 			height: 150px;
-			background-color:#660033;
+			background-color:#19070B;
 			padding: 10px;
 			margin-left: 20px;
 		}
 
 		body{
-			background-color: red;
+			background-color: #070B19;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
 
 		h1{
-			background-color:cornsilk;
+			background-color:#CEF6F5;
 			padding-top:20px;
 			padding-bottom: 20px;
 			padding-left:50px ;
-			border: 5px dashed black;
 			margin: 50px;
 			margin-bottom: 30px;
 		}
@@ -47,11 +47,8 @@
 		}
 
 		h4{
-			background-color: #336666;
+			background-color: #0B3B2E;
 			padding: 10px;
-			border: 2px solid #000066;
-			border-left-color:brown;
-			border-left-style: dotted ;
 			margin-right: 50%;
 			margin-left: 10px;
 		}
@@ -121,9 +118,14 @@ div{
 ul > li{color:saddlebrown}
 
 ul {
-	position: fixed;
-	top: 0;
-	width: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
   }
 		#border{
 			border: 2px double brown;
