--- a/anhäufung.html
+++ b/anhäufung.html
@@ -16,29 +16,29 @@
 <link href="faw/css/all.css" rel="stylesheet">
 
 	<style type="text/css">
-		p{
+			p{
 			font-family:'Courier New', Courier, monospace;
 			font-size:15px ;
 			font-weight: 600;
+			color: #E0F8F1;
 			width:60%;
 			height: 150px;
-			background-color:#C8D9A2;
+			background-color:#19070B;
 			padding: 10px;
 			margin-left: 20px;
 		}
 
 		body{
-			background-color: red;
+			background-color: #070B19;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
 
 		h1{
-			background-color:cornsilk;
+			background-color:#CEF6F5;
 			padding-top:20px;
 			padding-bottom: 20px;
 			padding-left:50px ;
-			border: 5px dashed black;
 			margin: 50px;
 			margin-bottom: 30px;
 		}
@@ -47,11 +47,8 @@
 		}
 
 		h4{
-			background-color: #336666;
+			background-color: #0B3B2E;
 			padding: 10px;
-			border: 2px solid #000066;
-			border-left-color:brown;
-			border-left-style: dotted ;
 			margin-right: 50%;
 			margin-left: 10px;
 		}
@@ -118,7 +115,6 @@ div{
 	padding: 5px;
 	padding-left: 20px;
 }
-		
 ul > li{color:saddlebrown}
 
 ul {
@@ -156,21 +152,6 @@ ul {
 			bottom: 0px;
 			position:relative;
 			width:50% ;
-		}
-		
-		table, th, td {
-  		border: 1px solid black;
- 		border-collapse: collapse;
-		}
-		
-		th, td {
- 		padding: 15px;
-  		text-align: left;
-		}
-		
-		#t01 {
-  		width: 100%;    
-  		background-color: #f1f1c1;
 		}
 		
 	</style>
