--- a/aktuell.html
+++ b/aktuell.html
@@ -28,7 +28,7 @@
 		}
 
 		body{
-			background-color: red;
+			background-color: #070B19;
 			color:black;
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 		}
