--- a/anhäufung.html
+++ b/anhäufung.html
@@ -68,11 +68,11 @@
 			background-color: yellow;
 		}
 		tr{
-			background-color: red;
+			background-color: #CEF6F5;
 		}
 		td{
 			background-color: rgb(5, 200, 30);
-			border: 1px dashed black;
+			border: 1px solid black;
 		}
 
 		#rahmen{
