--- a/index.html
+++ b/index.html
@@ -74,33 +74,7 @@ ul {
   top: 0;
   width: 100%;
   }
-		#border{
-			border: 2px double brown;
-		}
-		#rechts{
-			position: absolute;
-			top:180px;
-			left: 1070px;
-		}
-		#rechts2{
-			position: absolute;
-			top:430px;
-			left: 1070px;
-		}
 
-		#tab{
-			left: 550px;
-			bottom: 180px;
-			position:relative;
-		}
-
-		#table{
-			right: 440px;
-			bottom: 0px;
-			position:relative;
-			width:50% ;
-		}
-		
 		
 /* Create three equal columns that floats next to each other */
 .column {
@@ -192,12 +166,13 @@ Alle Links und Dokumente die ich irgend einmal anschauen möchte.
 <div class="row">
   <div class="column">
     <h2>aktuelle Projekte</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
-  </div>
+    <p> An welchen Themen arbeite ich momentan? 
+	    Übersicht und Verknüpfungen zu Informationssammlungen und Entwicklungen. </p>
+
   
   <div class="column">
     <h2>Projektideen</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+    <p>Alles, was ich vielleicht einmal anschauen werde.</p>
   </div>
   
    <div class="column">
